exercises/gcloud-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises-namespace
spec:
  type: LoadBalancer 
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
