exercises/gcloud-resources/service_log.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises-namespace
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
