exercises/gcloud-resources/service_ping.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises-namespace
spec:
  type: NodePort 
  selector:
    app: pingpong
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
